--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git@github.com/Blade67/GridMatrix.git"
+        "url": "https://github.com/Blade67/GridMatrix.git"
     },
     "keywords": [
         "Grid",
